Updated README.md, preparing 10x training loop (TODO: result gathering)

--- a/notebooks/training_dataset06.ipynb
+++ b/notebooks/training_dataset06.ipynb
@@ -319,10 +319,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TwoLayerLeaky(\n",
+      "LeakySNN(\n",
       "  (fc1): Linear(in_features=8, out_features=2500, bias=True)\n",
       "  (lif): Leaky()\n",
-      "  (fc2): Linear(in_features=2500, out_features=1, bias=False)\n",
+      "  (fc2): Linear(in_features=2500, out_features=1, bias=True)\n",
       ")\n"
      ]
     }
@@ -343,136 +343,136 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▍         | 1/25 [00:06<02:39,  6.65s/it]"
+      "  4%|▍         | 1/25 [00:11<04:35, 11.46s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 9.601514458794126, MSE:198.0351522101949,\n",
-      "RMSE: 14.072496303435113, IA: 0.43912075107015947\n"
+      "MAE: 9.157213896271811, MSE:162.07645371346868,\n",
+      "RMSE: 12.730925092602998, IA: 0.4957554792952984\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|█▌        | 4/25 [00:20<01:42,  4.86s/it]"
+      " 16%|█▌        | 4/25 [00:33<02:43,  7.81s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 7.302647416440049, MSE:116.41956910854,\n",
-      "RMSE: 10.789790040058241, IA: 0.82116843201532\n"
+      "MAE: 7.019202282249583, MSE:100.0566727250334,\n",
+      "RMSE: 10.002833234890673, IA: 0.8257338089572519\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 28%|██▊       | 7/25 [00:34<01:24,  4.71s/it]"
+      " 28%|██▊       | 7/25 [00:55<02:20,  7.81s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 7.210913311125915, MSE:108.03622123006045,\n",
-      "RMSE: 10.394047394064568, IA: 0.841566614561968\n"
+      "MAE: 6.9004508630388735, MSE:91.68253888968971,\n",
+      "RMSE: 9.575099941498769, IA: 0.8448511629858703\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 10/25 [00:48<01:10,  4.73s/it]"
+      " 40%|████      | 10/25 [01:17<01:51,  7.46s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 7.0680346629523125, MSE:104.81954260205328,\n",
-      "RMSE: 10.238141559973338, IA: 0.8481746316434207\n"
+      "MAE: 6.7337225357232064, MSE:89.4887367088352,\n",
+      "RMSE: 9.459848662047147, IA: 0.8478831759502645\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 52%|█████▏    | 13/25 [01:01<00:55,  4.63s/it]"
+      " 52%|█████▏    | 13/25 [01:39<01:27,  7.30s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 6.97306355851234, MSE:101.55595499292882,\n",
-      "RMSE: 10.077497456855488, IA: 0.8557960089209842\n"
+      "MAE: 6.619005738517452, MSE:89.0892455269789,\n",
+      "RMSE: 9.438709950357564, IA: 0.855081685659528\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████▍   | 16/25 [01:15<00:41,  4.64s/it]"
+      " 64%|██████▍   | 16/25 [02:00<01:05,  7.23s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 6.973294800278769, MSE:101.53524026250372,\n",
-      "RMSE: 10.07646963288749, IA: 0.8541986275207913\n"
+      "MAE: 6.765780346379803, MSE:89.9288001695572,\n",
+      "RMSE: 9.483079677486487, IA: 0.8492073664267429\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 76%|███████▌  | 19/25 [01:29<00:28,  4.73s/it]"
+      " 76%|███████▌  | 19/25 [02:23<00:44,  7.42s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 6.924184981384719, MSE:101.33744765718679,\n",
-      "RMSE: 10.066650269935218, IA: 0.8577013479348683\n"
+      "MAE: 6.7123583330584395, MSE:85.12274642624278,\n",
+      "RMSE: 9.226198915384536, IA: 0.8608906219658999\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 88%|████████▊ | 22/25 [01:43<00:14,  4.70s/it]"
+      " 88%|████████▊ | 22/25 [02:44<00:21,  7.21s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 7.053109839610282, MSE:103.10731936931087,\n",
-      "RMSE: 10.15417743440161, IA: 0.8515389280279116\n"
+      "MAE: 6.49161848608469, MSE:84.63468702368003,\n",
+      "RMSE: 9.199711246755522, IA: 0.8600815934000887\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [01:57<00:00,  4.70s/it]"
+      "100%|██████████| 25/25 [03:05<00:00,  7.41s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 7.163364157649134, MSE:99.50560779319964,\n",
-      "RMSE: 9.975249760943314, IA: 0.8627212049638938\n",
-      "Accuracy on validation dataset: 45.32%\n"
+      "MAE: 6.492936430914553, MSE:85.18869694625525,\n",
+      "RMSE: 9.229772312806814, IA: 0.8595099613209698\n",
+      "Accuracy on validation dataset: 45.550000000000004%\n"
      ]
     },
     {
@@ -498,14 +498,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test set: 37.669999999999995%\n",
-      "MAE: 6.69671032939376, MSE:86.44064148634061,\n",
-      "RMSE: 9.297345937757754, IA: 0.853880390569408\n"
+      "Accuracy on test set: 40.6%\n",
+      "MAE: 6.255369850961012, MSE:82.53447013553286,\n",
+      "RMSE: 9.084848382638691, IA: 0.8690785849794485\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(6.69671032939376, 86.44064148634061, 9.297345937757754, 0.853880390569408)"
+      "text/plain": "(6.255369850961012, 82.53447013553286, 9.084848382638691, 0.8690785849794485)"
      },
      "execution_count": 8,
      "metadata": {},
@@ -910,10 +910,45 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Repeated training on random datasets"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "outputs": [],
-   "source": [],
+   "source": [
+    "for i in range(10):\n",
+    "    # Prepare data loaders\n",
+    "    train_dataset, test_dataset, valid_dataset = torch.utils.data.random_split(all_data, (round(0.75 * len(all_data)), round(0.15 * len(all_data)), round(0.1 * len(all_data))))\n",
+    "    train_loader = data.DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
+    "    test_loader = data.DataLoader(test_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
+    "    valid_loader = data.DataLoader(valid_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
+    "\n",
+    "    # Prepare models\n",
+    "    model1 = TwoLayerPerceptron(num_inputs=8, num_hidden=2500, num_outputs=1)\n",
+    "    model2 = LeakySNN(num_inputs=8, num_hidden=2500, num_outputs=1)\n",
+    "    model3 = SynapticSNN(num_inputs=8, num_hidden=2500, num_outputs=1)\n",
+    "    model4 = DoubleLeakySNN(num_inputs=8, num_hidden=2500, num_outputs=1)\n",
+    "\n",
+    "    # Train models\n",
+    "    print(f'------------------------------------\\nTraining {i+1}')\n",
+    "    training_loop(model1, train_loader, valid_loader, device, num_epochs=25, validation=False)\n",
+    "    training_loop(model2, train_loader, valid_loader, device, num_epochs=25, validation=False)\n",
+    "    training_loop(model3, train_loader, valid_loader, device, num_epochs=20, validation=False)\n",
+    "    training_loop(model4, train_loader, valid_loader, device, num_epochs=20, validation=False)\n",
+    "\n",
+    "    # TODO: Gather results.\n",
+    "    get_error_measures(model1, test_loader, device=device, print_e=False)\n",
+    "    get_error_measures(model2, test_loader, device=device, print_e=False)\n",
+    "    get_error_measures(model3, test_loader, device=device, print_e=False)\n",
+    "    get_error_measures(model4, test_loader, device=device, print_e=False)"
+   ],
    "metadata": {
     "collapsed": false
    }
