--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -254,28 +254,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "pollution\\\n",
-    "    .merge(weather, how=\"inner\", on=\"date-time\")\\\n",
-    "    .rename(columns={\"MzWarAlNiepo-PM25-1g\": \"pm2_5\", \"Temperatura powietrza [°C]\" : \"temperature\", \"Ciśnienie na poziomie stacji [hPa]\" : \"pressure\", \"Wilgotność względna [%]\" : \"humidity\"})\\\n",
-    "    .sort_values('date-time').drop(columns=[\"hour\"])\\\n",
-    "    .groupby(pd.Grouper(key='date-time', axis=0, freq='D')).mean()\\\n",
-    "    .to_csv(\"../data/processed/daily_pollution_weather.csv\", index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "### Target preparation"
+    "### Target preparation\n",
+    "Datasets for 6h, 12h, 24h."
    ],
    "metadata": {
     "collapsed": false
@@ -337,60 +319,6 @@
     "target6.dropna().to_csv(\"../data/processed/target06.csv\", index=False)\n",
     "target12.dropna().to_csv(\"../data/processed/target12.csv\", index=False)\n",
     "target24.dropna().to_csv(\"../data/processed/target24.csv\", index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
-    "daily = pd.read_csv(\"../data/processed/daily_pollution_weather.csv\", delimiter=',')\n",
-    "daily.insert(8, \"target\", daily[\"pm2_5\"])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "         pm2_5  month  weekday  wind-east  wind-north  temperature  \\\n0    32.488333    1.0      4.0   0.082155   -1.431997    -0.125000   \n1    52.236250    1.0      5.0   1.364717   -0.704986     0.650000   \n2    23.772083    1.0      6.0   3.315934    1.621786     1.487500   \n3    34.702500    1.0      0.0   3.145808    1.146105     2.800000   \n4    22.851667    1.0      1.0   3.702931    2.338863     3.087500   \n..         ...    ...      ...        ...         ...          ...   \n360  54.067500   12.0      0.0   3.680998   -0.518715    -9.870833   \n361  28.182500   12.0      1.0   5.743422   -2.431569    -5.545833   \n362  40.446667   12.0      2.0   3.695867   -1.874503    -2.466667   \n363  42.038333   12.0      3.0  -0.206690   -1.164237     2.837500   \n364   9.327917   12.0      4.0  -5.165879   -1.288802     9.687500   \n\n        pressure   humidity     target  \n0     997.966667  92.166667  52.236250  \n1    1003.800000  94.791667  23.772083  \n2    1003.950000  95.833333  34.702500  \n3    1003.916667  95.958333  22.851667  \n4     998.779167  96.500000  17.306667  \n..           ...        ...        ...  \n360  1004.283333  81.666667  28.182500  \n361   998.512500  81.416667  40.446667  \n362   995.537500  89.875000  42.038333  \n363   999.454167  97.958333   9.327917  \n364   998.045833  95.041667        NaN  \n\n[365 rows x 9 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pm2_5</th>\n      <th>month</th>\n      <th>weekday</th>\n      <th>wind-east</th>\n      <th>wind-north</th>\n      <th>temperature</th>\n      <th>pressure</th>\n      <th>humidity</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>32.488333</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>0.082155</td>\n      <td>-1.431997</td>\n      <td>-0.125000</td>\n      <td>997.966667</td>\n      <td>92.166667</td>\n      <td>52.236250</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>52.236250</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>1.364717</td>\n      <td>-0.704986</td>\n      <td>0.650000</td>\n      <td>1003.800000</td>\n      <td>94.791667</td>\n      <td>23.772083</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>23.772083</td>\n      <td>1.0</td>\n      <td>6.0</td>\n      <td>3.315934</td>\n      <td>1.621786</td>\n      <td>1.487500</td>\n      <td>1003.950000</td>\n      <td>95.833333</td>\n      <td>34.702500</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>34.702500</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>3.145808</td>\n      <td>1.146105</td>\n      <td>2.800000</td>\n      <td>1003.916667</td>\n      <td>95.958333</td>\n      <td>22.851667</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>22.851667</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>3.702931</td>\n      <td>2.338863</td>\n      <td>3.087500</td>\n      <td>998.779167</td>\n      <td>96.500000</td>\n      <td>17.306667</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>360</th>\n      <td>54.067500</td>\n      <td>12.0</td>\n      <td>0.0</td>\n      <td>3.680998</td>\n      <td>-0.518715</td>\n      <td>-9.870833</td>\n      <td>1004.283333</td>\n      <td>81.666667</td>\n      <td>28.182500</td>\n    </tr>\n    <tr>\n      <th>361</th>\n      <td>28.182500</td>\n      <td>12.0</td>\n      <td>1.0</td>\n      <td>5.743422</td>\n      <td>-2.431569</td>\n      <td>-5.545833</td>\n      <td>998.512500</td>\n      <td>81.416667</td>\n      <td>40.446667</td>\n    </tr>\n    <tr>\n      <th>362</th>\n      <td>40.446667</td>\n      <td>12.0</td>\n      <td>2.0</td>\n      <td>3.695867</td>\n      <td>-1.874503</td>\n      <td>-2.466667</td>\n      <td>995.537500</td>\n      <td>89.875000</td>\n      <td>42.038333</td>\n    </tr>\n    <tr>\n      <th>363</th>\n      <td>42.038333</td>\n      <td>12.0</td>\n      <td>3.0</td>\n      <td>-0.206690</td>\n      <td>-1.164237</td>\n      <td>2.837500</td>\n      <td>999.454167</td>\n      <td>97.958333</td>\n      <td>9.327917</td>\n    </tr>\n    <tr>\n      <th>364</th>\n      <td>9.327917</td>\n      <td>12.0</td>\n      <td>4.0</td>\n      <td>-5.165879</td>\n      <td>-1.288802</td>\n      <td>9.687500</td>\n      <td>998.045833</td>\n      <td>95.041667</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>365 rows × 9 columns</p>\n</div>"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daily[\"target\"] = daily[\"target\"].shift(-1)\n",
-    "daily"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [],
-   "source": [
-    "daily.dropna().to_csv(\"../data/processed/target_daily.csv\", index=False)"
    ],
    "metadata": {
     "collapsed": false,
